--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-sdl2 = { version = "0.37.0", features = ["image"] }
+sdl2 = { version = "0.37.0", features = ["image","ttf"]}
